==========
01/06/2009
==========

- bugfix c/ comportamento incorreto do controle de altura da area de queue

HORAS TRABALHADAS: 2h