@@ -3,5 +3,6 @@
 ==========
 
 - bugfix c/ comportamento incorreto do controle de altura da area de queue
+- marcacao de artigos do feed adicionados ao queue
 
-HORAS TRABALHADAS: 2h
+HORAS TRABALHADAS: 4h
